# tenma-serial

./: README.md  pyproject.toml
examples/python/: output_plotting.py
tenma/: gtkIndicator.py  tenmaDcLib.py
tenma/commands/: cli.py
tenma/devices/: serial_handler.py  tenma_72_base.py  tenma_72_devices.py
tenma/exceptions/: base_exception.py
tests/: test_psu.py
