[tool.poetry]
name = "tenma-serial"
version = "1.1.2"
description = "Serial control of tenma device"
authors = ["Jordi Castells <jordi.kstells@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/kxtells/tenma-serial"
repository = "https://github.com/kxtells/tenma-serial"
documentation = "https://tenma-serial.readthedocs.io/en/latest/"
license = "GNU-3"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[tool.poetry.scripts]
tenma-control = "tenma.commands.cli:main"
tenma-applet = "tenma.gtkIndicator:main"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.8.0"
pytest = "^8.0.2"

[tool.pytest.init_options]
xfail_strict = true
pep8ignore = [
    "E402",
    "E501",
    "bwb/message/message.py ALL",
    "bt.py E701",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
